# app/Models/Employmentcredential.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class EmploymentCredential extends Model
+{
+    use HasFactory;
+    protected $guarded = [];
+    public function getuser()
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    protected $fillable = [
+        'position',
+        'company',
+        'start_year',
+        'end_year'
+    ];
+}
